[package]
name = "vulkanox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytemuck = { version = "1.14.0", features = ["derive"] }
gltf = "1.3.0"
palette = "0.7.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
vulkano = "0.34.1"
vulkano-shaders = "0.34.0"
winit = { version = "0.29.3", features = ["rwh_05"] }
